syntax = "proto3";

message PhotoMessage {
  string url       = 1;
  int64  user_guid = 2;
}

message UserMessage {
  string guid         = 1;
  string name         = 2;
  string email        = 3;
  string email_domain = 4 [deprecated = true];
  string password     = 5;
  repeated string nullify      = 6;
  repeated PhotoMessage photos = 7;
  int64 created_at = 8;
  int64 updated_at = 9;
}

message UserSearchMessage {
  repeated string guid = 1;
  repeated string email = 2;
}

message ZeroMessage {
  bool nullify = 1;
  int64 z_saber_level = 2;
}
